--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"@blink-mind/plugin-json-serializer": "0.0.20-beta.6",
 		"@blink-mind/plugin-rich-text-editor": "0.0.20-beta.6",
 		"@blink-mind/plugin-theme-selector": "0.0.20-beta.6",
-		"@blink-mind/plugin-topology-diagram": "0.0.20-beta.6",
+		"@blink-mind/plugin-topology-diagram": "^0.0.19",
 		"@blink-mind/plugins": "0.0.20-beta.6",
 		"@blink-mind/renderer-react": "0.0.20-beta.6",
 		"@blueprintjs/core": "^3.17.2",
@@ -17,10 +17,14 @@
 		"cross-env": "^6.0.3",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0",
-		"styled-components": "^4.4.1"
+		"styled-components": "^4.4.1",
+		"typescript": "^4.2.2"
 	},
 	"devDependencies": {
 		"@babel/core": "7.5.5",
+		"@babel/plugin-proposal-class-properties": "^7.13.0",
+		"@babel/plugin-transform-react-jsx": "^7.12.17",
+		"@babel/preset-env": "^7.13.5",
 		"@svgr/webpack": "4.3.2",
 		"@typescript-eslint/eslint-plugin": "1.13.0",
 		"@typescript-eslint/parser": "1.13.0",
@@ -156,7 +160,18 @@
 	},
 	"babel": {
 		"presets": [
-			"react-app"
+			[
+				"@babel/preset-env",
+				{
+					"targets": {
+						"esmodules": true
+					}
+				}
+			]
+		],
+		"plugins": [
+			"@babel/plugin-proposal-class-properties",
+			"@babel/plugin-transform-react-jsx"
 		]
 	}
 }
